--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.13.3",
     "framer-motion": "^12.26.2",
     "next": "16.1.1",
     "react": "19.2.3",
